@@ -64,6 +64,13 @@ NEW FEATURES
     o   The key argument of data.table() now accepts a vector of
         column names in addition to a single comma separated string
         of column names. Thanks to Steve Lianoglou for highlighting.
+        
+    o   A new argument .SDcols has been added to [.data.table. This
+        may be character column names or numeric positions, and
+        specifies the columns of x included in .SD. This is useful
+        for speed when applying a function through a subset of
+        (possible very many) columns :
+            DT[,lapply(.SD,sum),by="x,y",.SDcols=301:350]
 
 
 BUG FIXES
